Sound cue for reflector shield triggering.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3998,6 +3998,7 @@ object_type: [
 						spawn('frogatto_playable.reflector_bubble_reflected_shot', collide_with.mid_x, collide_with.mid_y, {
 							velocity_x: spd * vel_xy_after_reflection.x,
 							velocity_y: spd * vel_xy_after_reflection.y,
+							lib.sound.play_sound(me, 'metal bonk'),
 							rotate: reflected_angle,
 						}),
 					] 
