Rocky road house updates.

--- a/data/level/Forest/rocky-road-house-inside.cfg
+++ b/data/level/Forest/rocky-road-house-inside.cfg
@@ -16,19 +16,6 @@
 			"y": 153
 		},
 		{
-			"_uuid": "f4176c925c174d9ebd3bf4cc3f61d478",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "interior_door",
-			"property_data": {
-				"_dest_door": "outside_door",
-				"_dest_level": "rocky-road.cfg"
-			},
-			"type": "seaside_house_interior_door",
-			"x": -32,
-			"y": 384
-		},
-		{
 			"_uuid": "7acf3e0e33ab4f83ba49e05977b49ef4",
 			"current_frame": "normal",
 			"custom": true,
@@ -499,7 +486,7 @@
 			"face_right": false,
 			"label": "_5cbd57ba",
 			"type": "forest_interior_table_foreground1",
-			"x": 216,
+			"x": 166,
 			"y": 427
 		},
 		{
@@ -809,6 +796,162 @@
 			"type": "forest_interior_window_dormer",
 			"x": 928,
 			"y": -43
+		},
+		{
+			"_uuid": "f550007ce619472d96840f8254291f06",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1c0d17ab",
+			"type": "forest_interior_decor_shelf_wallmount2_right",
+			"x": -404,
+			"y": -328
+		},
+		{
+			"_uuid": "8acdf0adbc5a421ca2041aed7bb1fd75",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_41bed2f2",
+			"type": "forest_interior_decor_shelf_wallmount1_right",
+			"x": 768,
+			"y": 160
+		},
+		{
+			"_uuid": "c61252e61688404c9ca24693c190055c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_25eea0b6",
+			"type": "forest_interior_decor_shelf_wallmount1_left",
+			"x": 736,
+			"y": 160
+		},
+		{
+			"_uuid": "85ac6d1b4b8f418ea8c73f0b57f93680",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_52130a33",
+			"type": "forest_interior_decor_shelf_wallmount1_right",
+			"x": -918,
+			"y": 44
+		},
+		{
+			"_uuid": "db211d5d751446d1b0188de433cdac2a",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "interior_door",
+			"property_data": {
+				"_dest_door": "outside_door",
+				"_dest_level": "rocky-road.cfg"
+			},
+			"type": "forest_foreground_interior_door",
+			"x": 147,
+			"y": 481
+		},
+		{
+			"_uuid": "7c6acf4293e146ca82c7769b010143f4",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7f5f8a2d",
+			"type": "forest_interior_knickknacks_cloth1",
+			"x": 786,
+			"y": 178
+		},
+		{
+			"_uuid": "3d533f39ff004b729baa0b0f64119b9a",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_19c7030c",
+			"type": "forest_interior_knickknacks_plate1",
+			"x": 740,
+			"y": 160
+		},
+		{
+			"_uuid": "d1f063ec37b048d3b9c811f2543d4346",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5e87baa0",
+			"type": "forest_interior_knickknacks_jar2",
+			"x": 778,
+			"y": 132
+		},
+		{
+			"_uuid": "0317cd586ba44fcda003d49d59b33668",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_50f3afa9",
+			"type": "forest_interior_knickknacks_jar1",
+			"x": 800,
+			"y": 163
+		},
+		{
+			"_uuid": "9eef84b88dff46e58e43e333e0cd83f7",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3d24588a",
+			"type": "forest_interior_knickknacks_books1",
+			"x": 733,
+			"y": 400
+		},
+		{
+			"_uuid": "857b4c68865c4ef1b929588dbddc03d1",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_26ed4321",
+			"type": "forest_interior_knickknacks_books2",
+			"x": -386,
+			"y": -296
+		},
+		{
+			"_uuid": "175eed49dc8d48138801977a244f0c90",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_78633589",
+			"type": "forest_interior_knickknacks_jug2",
+			"x": -368,
+			"y": -296
+		},
+		{
+			"_uuid": "bbf0aedb80f44449b645c239ac572a14",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4aa49b26",
+			"type": "forest_interior_knickknacks_jug3",
+			"x": -619,
+			"y": -174
+		},
+		{
+			"_uuid": "32b68a32798644a8aaa1fe5005375c4e",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2ff8f3e3",
+			"type": "forest_interior_knickknacks_mushroom1",
+			"x": -447,
+			"y": 174
+		},
+		{
+			"_uuid": "4d8b5a69f64f46a49ea6ae95ee572c9a",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_8c5e173",
+			"type": "forest_interior_knickknacks_jug1",
+			"x": 311,
+			"y": -385
+		},
+		{
+			"_uuid": "8b6e70a43d764b91927b92d2215a0590",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7bf120c9",
+			"property_data": {
+				"shadow_opacity": 0.70,
+				"shadow_color": {
+					"r": "@eval 19/255.0",
+					"g": "@eval 0/255.0",
+					"b": "@eval 27/255.0"
+				}
+			},
+			"type": "shadow_effect_controller",
+			"x": 437,
+			"y": 245
 		}
 	],
 	"dimensions": [-1024,-768,1855,735],
@@ -959,42 +1102,6 @@ wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp
 			"zorder": "background_parallax_floors"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_decor"
-		},
-		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,dwl,dwl
 ,,,,,,,,,,,,,,,,,,,,,dwl,dwl
 ,,,,,,,,,,,,,,,,,,,,,dwl,dwl
@@ -1126,24 +1233,6 @@ csb,,csb
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_back_wall_decor"
-		},
-		{
-			"tiles": ",
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -1185,8 +1274,8 @@ csb,,csb
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -1302,24 +1391,6 @@ wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "elevator_shafts"
-		},
-		{
-			"tiles": ",
 ,,,bdg,bdg,bdg,,bdg,bdg,bdg,bdg,bdg
 ,bdg,bdg,,,bdg,,bdg,,,,,bdg,bdg
 ,,,,,,,,,,,,,,bdg,bdg,bdg,bdg
@@ -1338,105 +1409,7 @@ wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn
 			"zorder": "interior_shelves_and_stairs"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_scaffolding_background"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "npcs"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -1444,60 +1417,6 @@ wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "player"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foliage_foreground"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "",
