--- a/data/level/Forest/rocky-road-house-inside.cfg
+++ b/data/level/Forest/rocky-road-house-inside.cfg
@@ -906,8 +906,8 @@
 			"custom": true,
 			"label": "_78633589",
 			"type": "forest_interior_knickknacks_jug2",
-			"x": -368,
-			"y": -296
+			"x": -395,
+			"y": -262
 		},
 		{
 			"_uuid": "bbf0aedb80f44449b645c239ac572a14",
@@ -942,16 +942,121 @@
 			"custom": true,
 			"label": "_7bf120c9",
 			"property_data": {
-				"shadow_opacity": 0.70,
 				"shadow_color": {
-					"r": "@eval 19/255.0",
-					"g": "@eval 0/255.0",
-					"b": "@eval 27/255.0"
-				}
+					"b": 0.105882,
+					"g": 0.0,
+					"r": 0.074509
+				},
+				"shadow_opacity": 0.7
 			},
 			"type": "shadow_effect_controller",
 			"x": 437,
 			"y": 245
+		},
+		{
+			"_uuid": "3beefb530d044c46beaf6de30636c3c0",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5c942343",
+			"property_data": {
+				"_x_bound": 16,
+				"_y_bound": -516
+			},
+			"type": "light_controller",
+			"x": 288,
+			"y": -416
+		},
+		{
+			"_uuid": "205ff7cc0bd94504b1671f0cfad3abc4",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2d5a2d6c",
+			"property_data": {
+				"_x_bound": 576,
+				"_y_bound": -516
+			},
+			"type": "light_controller",
+			"x": 800,
+			"y": -416
+		},
+		{
+			"_uuid": "daf738a1ffef423281db0ddd03fa7d8f",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_70cd9186",
+			"property_data": {
+				"_x_bound": 82,
+				"_y_bound": 214
+			},
+			"type": "light_controller",
+			"x": 384,
+			"y": 314
+		},
+		{
+			"_uuid": "a8f75c2d97f849e4b04567a0850ca57a",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_65dd0055",
+			"property_data": {
+				"_x_bound": 582,
+				"_y_bound": 274
+			},
+			"type": "light_controller",
+			"x": 842,
+			"y": 374
+		},
+		{
+			"_uuid": "4f42598e699b4d4ea401e421ae89a1dd",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_72a63585",
+			"property_data": {
+				"_x_bound": -255,
+				"_y_bound": 328
+			},
+			"type": "light_controller",
+			"x": -11,
+			"y": 428
+		},
+		{
+			"_uuid": "5fc9540f39734240b56c435be5ab2691",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_24640d40",
+			"property_data": {
+				"_x_bound": -928,
+				"_y_bound": 16
+			},
+			"type": "light_controller",
+			"x": -716,
+			"y": 116
+		},
+		{
+			"_uuid": "b2b7efb54d394b59a96897d9e4adcecc",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_69dd9b23",
+			"type": "candle",
+			"x": -357,
+			"y": -287
+		},
+		{
+			"_uuid": "f3438e02a60e4ed780331f437fb76d14",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_35ed1f59",
+			"type": "lantern",
+			"x": 775,
+			"y": 100
+		},
+		{
+			"_uuid": "7d2660265e05473cbf43c4dce7da31bd",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2203702f",
+			"type": "lantern",
+			"x": -41,
+			"y": -16
 		}
 	],
 	"dimensions": [-1024,-768,1855,735],
