Tweaked some graphics/definitions for a test case for platform standability.

--- a/data/objects/props/forest-interior-decor/forest_interior_woodwork_loft_walkway_center.cfg
+++ b/data/objects/props/forest-interior-decor/forest_interior_woodwork_loft_walkway_center.cfg
@@ -10,7 +10,7 @@ prototype: ["cosmetic_effects"],
 parallax_scale_x: 1050,
 parallax_scale_y: 1000,
 
-platform_area: [12,25,96,26],
+platform_area: [6,25,33,26],
 
 properties: {
 	material_sound: "enum wood_plank",
@@ -19,6 +19,7 @@ properties: {
 animation: {
 	id: "normal",
 	image: "props/forest-interior-woodwork2.png",
+	no_remove_alpha_borders: true,
 	rect: [192,144,255,191],
 	//palettes: "@include data/palettes.cfg:dungeon_palettes",
 },
