--- a/data/objects/props/forest-interior-decor/forest_interior_woodwork_loft_walkway_side.cfg
+++ b/data/objects/props/forest-interior-decor/forest_interior_woodwork_loft_walkway_side.cfg
@@ -21,5 +21,6 @@ animation: {
 	image: "props/forest-interior-woodwork2.png",
 	rect: [144,144,191,191],
 	//palettes: "@include data/palettes.cfg:dungeon_palettes",
+	no_remove_alpha_borders: true,
 },
 }
