Updated several forest house levels to have the new tileset.

--- a/data/level/Forest/tempo-village-house-store.cfg
+++ b/data/level/Forest/tempo-village-house-store.cfg
@@ -124,7 +124,7 @@
 			"custom": true,
 			"label": "interior_door",
 			"property_data": {
-				"_dest_door": "store_door",
+				"_dest_door": "shop_door",
 				"_dest_level": "tempo-docks.cfg"
 			},
 			"type": "forest_interior_woodwork_side_diagonal_interparallax_wall1",
@@ -396,6 +396,89 @@
 			"type": "forest_interior_woodwork_beam_end2",
 			"x": -305,
 			"y": -44
+		},
+		{
+			"_uuid": "7c39dafe925a489a9ffafd325e1a6b38",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7bf120c9",
+			"property_data": {
+				"shadow_color": {
+					"b": 0.105882,
+					"g": 0.0,
+					"r": 0.074509
+				},
+				"shadow_opacity": 0.7
+			},
+			"type": "shadow_effect_controller",
+			"x": 437,
+			"y": 245
+		},
+		{
+			"_uuid": "44234c093a6b495a9751f0450a10b5c2",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3140085d",
+			"type": "lantern",
+			"x": 1212,
+			"y": 52
+		},
+		{
+			"_uuid": "57753ac9968f49d8bbc142fc634b0da1",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1998e64b",
+			"type": "candle",
+			"x": 1239,
+			"y": 171
+		},
+		{
+			"_uuid": "f55fa2b251754c8b973239096d8e6ece",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_217f5046",
+			"type": "fishbowl",
+			"x": 1178,
+			"y": 138
+		},
+		{
+			"_uuid": "ba3a5049c85a4f829c4ce7a1b8b9b5f5",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_c000443",
+			"property_data": {
+				"_x_bound": -480,
+				"_y_bound": 80
+			},
+			"type": "light_controller",
+			"x": -108,
+			"y": 180
+		},
+		{
+			"_uuid": "089dde32eede41d383b2fa5724408978",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_220eea0b",
+			"property_data": {
+				"_x_bound": -64,
+				"_y_bound": 83
+			},
+			"type": "light_controller",
+			"x": 289,
+			"y": 183
+		},
+		{
+			"_uuid": "85557b9c042c4b0dbfdc7958b7b14ed6",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2755e00d",
+			"property_data": {
+				"_x_bound": 528,
+				"_y_bound": 105
+			},
+			"type": "light_controller",
+			"x": 998,
+			"y": 205
 		}
 	],
 	"dimensions": [-640,-448,1663,599],
@@ -452,42 +535,13 @@ wvd,wvd,wvd,wvd,wvd,wvd,wvd,wvd,,,,,wvd,wvd,wvd,wvd,wvd,wvd,wvd,wvd,wvd",
 ,
 ,
 wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp",
-			"unique_tiles": "wfp",
+			"unique_tiles": ",wfp",
 			"variations": "",
 			"x": -352,
 			"x_speed": 103,
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "background_parallax_floors"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_decor"
 		},
 		{
 			"tiles": ",
@@ -516,25 +570,6 @@ wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,wfp,
 			"y": -224,
 			"y_speed": 100,
 			"zorder": "interior_background_tiles"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_back_wall_decor"
 		},
 		{
 			"tiles": ",
@@ -638,102 +673,6 @@ wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,
 			"y": -96,
 			"y_speed": 100,
 			"zorder": "pillars"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_shelves_and_stairs"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "npcs"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
 		}
 	],
 	"title": "",
