Fixed an error in the shield bubble spawning code.

--- a/data/items.cfg
+++ b/data/items.cfg
@@ -362,6 +362,9 @@
 		item_category: "@eval enum secondary_item",
 		anim_rect: [1,230,17,245],
 		hud_img_rect: [126, 42,165,81],
+		item_use: "def(obj player_controlled player) -> commands if(player is obj frogatto_playable,
+			spawn('frogatto_playable.reflector_bubble', player.mid_x, player.mid_y, {parent: player})
+		)",
 		item_element_type: "@eval enum acid",
 	},
 	{
