Applied lighting to the potbelly stove.

--- a/data/objects/props/utilities/potbelly_stove.cfg
+++ b/data/objects/props/utilities/potbelly_stove.cfg
@@ -3,13 +3,33 @@ id: "potbelly_stove",
 zorder: "@include data/zorder.cfg:interior_decor",
 zsub_order: -5,
 platform_area: [0,35,32,36],
-prototype: ["cosmetic_effects"],
-on_create: "spawn('sound_source_individual',mid_x,mid_y,{sound_file:'ambient/fireplace-gas.ogg'})",
+prototype: ["transient_object"],
 editor_info: {
 	category: "decor, seaside",
 },
+
+
 properties: {
 	material_sound: "enum medium_metal",
+	
+	_fire_glow: {
+				type: "obj effects_attache_glow_source",
+				init: "object('effects_attache_glow_source', mid_x, mid_y, {
+								time_to_die: 0,
+								parent: me,
+								custom_relative_pos_default: {mid_x: 0,	mid_y: 10},
+								base_alpha: 160,
+								flicker_type: enum sputter,
+								graphics: enum firey,
+								scale_factor: 0.05,
+								zorder: 5000,
+							})",
+			},
+
+	epihittable_obj_constructor: "[
+		add_object(_fire_glow),	
+		spawn('sound_source_individual',mid_x,mid_y,{sound_file:'ambient/fireplace-gas.ogg'}),
+	]",
 },
 animation: {
 	id: "normal",
