Added a missing tile so that odd-number-wide configurations of the wooden bridges inside forest houses can be used.

--- a/data/tiles/wooden_interior2.png_MTP_bridges.cfg
+++ b/data/tiles/wooden_interior2.png_MTP_bridges.cfg
@@ -249,5 +249,24 @@ multi_tile_pattern: [
 		],
 	},
 
+	{
+		chance: 100,
+		pattern: " (bdg)?,    ->tile1  ,(bdg)?
+                    bdg  , bdg->tile2  , bdg 
+                   (bdg)?,    ->tile3  ,(bdg)?",
+		range: [
+			{
+				image: "tiles/wooden-interior2.png",
+				from: "tile1",
+				to: "tile3",
+				tiles: "cf",
+			}
+		],
+		tile2: {
+			passthrough: true,
+			solid: true,
+		},
+	}
+
 ],
 }
