Added a new railing upright to provide an endcap if the forest house bridges are used with their ends in the open, rather than being wall-mounted.

--- a/data/level/Forest/tempo-outskirts-inside.cfg
+++ b/data/level/Forest/tempo-outskirts-inside.cfg
@@ -211,42 +211,6 @@
 			"y": 288
 		},
 		{
-			"_uuid": "dd95378550f848f58556753bd649b1d9",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_7278287a",
-			"type": "ceiling_lamp",
-			"x": -73,
-			"y": -84
-		},
-		{
-			"_uuid": "e99d305034b74871b626bc2b3f5526eb",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_256bcb94",
-			"type": "ceiling_lamp",
-			"x": 123,
-			"y": 205
-		},
-		{
-			"_uuid": "a66140cff0c04119a6ea8a85d213bce2",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_6092a31f",
-			"type": "ceiling_lamp",
-			"x": 622,
-			"y": 204
-		},
-		{
-			"_uuid": "a696549226f84c6196e220856888ead8",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_5b7ecb21",
-			"type": "ceiling_lamp",
-			"x": 854,
-			"y": -85
-		},
-		{
 			"_uuid": "fad137ab8f224459912ad244e569c4ec",
 			"current_frame": "normal",
 			"custom": true,
@@ -499,6 +463,78 @@
 			"type": "forest_interior_woodwork_chandelier",
 			"x": 321,
 			"y": -388
+		},
+		{
+			"_uuid": "5066ef23e9c3478cac04ef5f142e75c8",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_c11728c",
+			"type": "forest_interior_decor_railing_upright_bar",
+			"x": -182,
+			"y": 65
+		},
+		{
+			"_uuid": "043a860f781142fc938173b6ce6e161b",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6daeadaf",
+			"type": "forest_interior_decor_railing_upright_bar",
+			"x": 55,
+			"y": 62
+		},
+		{
+			"_uuid": "9202366918624997ba30fe533288e467",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2c65ff82",
+			"type": "forest_interior_decor_railing_upright_bar",
+			"x": -330,
+			"y": -323
+		},
+		{
+			"_uuid": "21439725427a4a4a958bd60d82ae37bc",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4c8ec958",
+			"type": "forest_interior_decor_railing_upright_bar",
+			"x": -535,
+			"y": -323
+		},
+		{
+			"_uuid": "c428f544c20a45d694e3f7e317bcd8e0",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_62293da6",
+			"type": "lantern",
+			"x": 144,
+			"y": 187
+		},
+		{
+			"_uuid": "7d9cec7abe824d498e59c5c6b9cc5693",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4de1b4a4",
+			"type": "lantern",
+			"x": 719,
+			"y": 189
+		},
+		{
+			"_uuid": "372998154a264d8cba008d762d8da2c6",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_747f3a87",
+			"type": "lantern",
+			"x": 848,
+			"y": -100
+		},
+		{
+			"_uuid": "3d92f394fd554a20a6a84a4f26966cba",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3d1fc5e8",
+			"type": "lantern",
+			"x": -144,
+			"y": -97
 		}
 	],
 	"dimensions": [-896,-768,1407,735],
@@ -515,6 +551,14 @@
 	"tile_map": [
 		{
 			"tiles": ",,,,,,,,wvd,wvd,wvd,wvd,wvd,wvd,wvd,wvd
+,
+,
+,
+,
+,
+,
+,
+,
 ,
 ,
 ,
@@ -536,7 +580,12 @@
 ,,,,,,,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt
 ,,,,,,,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt
 ,,,,,,,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt
-,,,,,,,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt",
+,,,,,,,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt,wnt
+,
+,
+,
+,
+,",
 			"unique_tiles": ",wnt,wtd,wtm",
 			"variations": "",
 			"x": 0,
@@ -569,6 +618,9 @@
 		},
 		{
 			"tiles": ",
+,
+,
+,
 ,
 ,
 ,
@@ -651,9 +703,9 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,,,,,,,,,,,,,,,,cwl,cwl
 ,
 ,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cwl,cwl,cwl,cwl,cwl,,,cwl,cwl,cwl,cwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cwl,cwl,cwl,cwl,cwl,cwl,,cwl,cwl,cwl,cwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl
@@ -669,7 +721,8 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 			"zorder": "interior_background_tiles_overlays"
 		},
 		{
-			"tiles": "csd,csd,csd,csd,csd,csd,csd,csd,csd,csd,csd
+			"tiles": ",,,,,csd,csd
+csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 ,
 ,
 ,
@@ -677,26 +730,25 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,
 ,
 ,
-,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,csd,csd,csd,csd,csd,csd,csd,csd,csd,csd,csd,csd,csd,csd",
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,csd,csd
+,,,,,,,,,,,,,,,,,,,,,,,,,,,csd,csd,csd,csd,csd,,,csd,csd,csd,csd,csd,csd,csd",
 			"unique_tiles": ",csd",
 			"variations": "",
 			"x": -320,
 			"x_speed": 100,
-			"y": -64,
+			"y": -96,
 			"y_speed": 100,
 			"zorder": "interior_background_tiles_overlays_two"
 		},
 		{
 			"tiles": "csb,csb,csb,csb,csb,csb,csb,csb,csb
-
-
-
-
-
-
-
-
+,
+,
+,
+,
+,
+,,,,,,,,,csb,csb,csb,csb
+,,,,,,,,,,csb,csb
 ,
 ,
 ,
@@ -704,7 +756,8 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,
 ,
 ,
-,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,csb,csb,csb,csb
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,csb,csb
 ,
 ,
 ,
@@ -720,10 +773,6 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
 ,
 ,
 ,
@@ -772,7 +821,7 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
-,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
+,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,wwl,wwl,wwl,wwl,wwl,,,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -781,7 +830,7 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
-,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
+,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,wwl,wwl,,,wwl,wwl,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -820,21 +869,6 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 			"y": -1088,
 			"y_speed": 100,
 			"zorder": "interior_solid_ground_tiles"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 97,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_solid_ground_tiles_overlays"
 		},
 		{
 			"tiles": ",wsl,,,,,,,,,,,,,,,,,,,,,wsr
@@ -892,7 +926,7 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 			"zorder": "elevator_shafts"
 		},
 		{
-			"tiles": "
+			"tiles": ",
 ,
 ,
 ,
@@ -912,7 +946,9 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,
 ,
 ,,,,,,,,,,,,,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg
-,,,,,,,,,,,,,bdg,,,,,,,bdg",
+,,,,,,,,,,,,,bdg,,,,,,,bdg
+,
+,",
 			"unique_tiles": ",bdg",
 			"variations": "",
 			"x": -576,
@@ -923,6 +959,9 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 		},
 		{
 			"tiles": ",
+,
+,
+,
 ,
 ,
 ,
@@ -938,10 +977,6 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
 ,
 ,
 ,
@@ -967,10 +1002,6 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,
 ,
 ,
-,
-,
-,
-,
 ,",
 			"unique_tiles": "",
 			"variations": "",
@@ -982,10 +1013,6 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
 ,
 ,
 ,
@@ -1011,6 +1038,19 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 ,
 ,
 ,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": ",
+,
+,
 ,
 ,
 ,
@@ -1022,10 +1062,18 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "player"
+			"zorder": "mushrooms_foreground"
 		},
 		{
-			"tiles": "",
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -1036,10 +1084,6 @@ cwl,cwl,cwl,cwl,,,,cwl,cwl,cwl,cwl,cwl,cwl,cwl,cwl
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
 ,
 ,
 ,
