--- a/data/tiles/wooden_interior2.png_MTP_bridges.cfg
+++ b/data/tiles/wooden_interior2.png_MTP_bridges.cfg
@@ -29,7 +29,7 @@ multi_tile_pattern: [
 				from: "tile1",
 				to: "tile6",
 				tiles: "fm",
-				zorder: "foliage_foreground",
+				zorder: "mushrooms_foreground",
 			},
 		],
 		tile3: {
@@ -59,7 +59,7 @@ multi_tile_pattern: [
 				from: "tile1",
 				to: "tile6",
 				tiles: "fo",
-				zorder: "foliage_foreground",
+				zorder: "mushrooms_foreground",
 			},
 		],
 		tile3: {
@@ -125,7 +125,7 @@ multi_tile_pattern: [
 				from: "tile1",
 				to: "tile6",
 				tiles: "8o",
-				zorder: "foliage_foreground",
+				zorder: "mushrooms_foreground",
 			},{
 				image: "tiles/wooden-interior2.png",
 				from: "tile1",
@@ -153,7 +153,7 @@ multi_tile_pattern: [
 				from: "tile1",
 				to: "tile6",
 				tiles: "8m",
-				zorder: "foliage_foreground",
+				zorder: "mushrooms_foreground",
 			},{
 				image: "tiles/wooden-interior2.png",
 				from: "tile1",
@@ -181,7 +181,7 @@ multi_tile_pattern: [
 				from: "tile1",
 				to: "tile6",
 				tiles: "8g",
-				zorder: "foliage_foreground",
+				zorder: "mushrooms_foreground",
 			},{
 				image: "tiles/wooden-interior2.png",
 				from: "tile1",
@@ -205,7 +205,7 @@ multi_tile_pattern: [
 						from: "tile1",
 						to: "tile6",
 						tiles: "8i",
-						zorder: "foliage_foreground",
+						zorder: "mushrooms_foreground",
 					},{
 						image: "tiles/wooden-interior2.png",
 						from: "tile1",
@@ -229,7 +229,7 @@ multi_tile_pattern: [
 						from: "tile1",
 						to: "tile6",
 						tiles: "8k",
-						zorder: "foliage_foreground",
+						zorder: "mushrooms_foreground",
 					},{
 						image: "tiles/wooden-interior2.png",
 						from: "tile1",
