WIP water surface fade in/out logic fix.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -69,58 +69,66 @@ object_type: [{
 	is_strict: true,
 	zorder: "@include data/zorder.cfg:water",
 	
+	properties: {
+		//test on ./anura --level=rocky-roots.cfg
+		//  …######_____#####_____#_#####_#####___#…
+		//0     0001   1  0  1   101  0  1 ?? 1  1  00
+		//       ..               .
+		//       36               6
+		calculate_water_surface_intensity: "
+			def(int index, [bool] point_solidity_list) -> decimal //0..1
+				max(
+					int(point_solidity_list[index+0]) * (3/3.), //Full opacity when no wall.
+					int(point_solidity_list[index-1]) * (2/3.), //More transparency farther into the wall.
+					int(point_solidity_list[index+1]) * (2/3.),
+					int(point_solidity_list[index-2]) * (1/3.),
+					int(point_solidity_list[index+2]) * (1/3.),
+				)
+		",
+	},
+	
 	on_create: "[
 		set(relative_x, (parent._x_bound + parent._x2_bound)/2 - parent.mid_x),
 		set(relative_y, parent._y_bound-parent.mid_y),
 		
 		set(animation, ( //Two-line water surface image; fades in on both sides.
-			lib.gui.render_frame(c, water_width, 2, [
-				
-				//Top surface color fade-in
-				c.set_linear_pattern(0, 0, water_surface_fade_distance, 0, [
-					surface_color_1 + { offset: 0, alpha: 0.0 },
-					surface_color_1 + { offset: 1, alpha: 1.0 }]),
-				c.rectangle(0, 0, water_surface_fade_distance, 1),
-				c.fill(),
-				
-				//Top surface color line
-				c.set_source_color(surface_color_1),
-				c.rectangle(water_surface_fade_distance, 0, water_width - water_surface_fade_distance*2, 1),
-				c.fill(),
-				
-				//Top surface color fade-out
-				c.set_linear_pattern(water_width-water_surface_fade_distance, 0,  water_width, 0, [
-					surface_color_1 + { offset: 0, alpha: 1.0 },
-					surface_color_1 + { offset: 1, alpha: 0.0 }]),
-				c.rectangle(water_width-water_surface_fade_distance, 0, water_width, 1),
-				c.fill(),
-				
-				
-				//Bottom surface color fade-in
-				c.set_linear_pattern(0, 0, water_surface_fade_distance, 0, [
-					surface_color_2 + { offset: 0, alpha: 0.0 },
-					surface_color_2 + { offset: 1, alpha: 1.0 }]),
-				c.rectangle(0, 1, water_surface_fade_distance, 1),
-				c.fill(),
-				
-				//Bottom surface color line
-				c.set_source_color(surface_color_2),
-				c.rectangle(water_surface_fade_distance, 1, water_width - water_surface_fade_distance*2, 1),
-				c.fill(),
-				
-				//Bottom surface color fade-out
-				c.set_linear_pattern(water_width-water_surface_fade_distance, 0,  water_width, 0, [
-					surface_color_2 + { offset: 0, alpha: 1.0 },
-					surface_color_2 + { offset: 1, alpha: 0.0 }]),
-				c.rectangle(water_width-water_surface_fade_distance, 1, water_width, 1),
-				c.fill(),
-				
-			]) where
+			lib.gui.render_frame(c, 
+				water_width, 2, 
+				map(range(filter_radius, size(solidity_probes)-1 - filter_radius), 'step',
+					map([ //Top and bottom 'surface lines'.
+						{offset_y: 0, color: surface_color_1}, 
+						{offset_y: 1, color: surface_color_2},
+					], 'line', [
+						c.set_linear_pattern(parent_left_tile_aligned_bound + step*tile_size, 0,  parent_left_tile_aligned_bound + step*tile_size + tile_size, 0, [
+							line.color + { offset: 0, alpha: calculate_water_surface_intensity(step+0, solidity_probes) },
+							line.color + { offset: 1, alpha: calculate_water_surface_intensity(step+1, solidity_probes) },
+						]),
+						c.rectangle(parent_left_tile_aligned_bound + step*tile_size, line.offset_y, tile_size, 1),
+						c.fill(),
+					])
+				)
+			)
+			where
 				c = canvas(),
-				water_width = parent._x2_bound - parent._x_bound,
 				surface_color_1 = {red:1.0, green:1.0, blue:1.0}, //top line
 				surface_color_2 = {red:0.5, green:0.5, blue:0.5}, //bottom line
 				water_surface_fade_distance = 64,
+				solidity_probes =
+					[true]*filter_radius 
+					+ map(
+						range(-water_surface_overhang, tile_edges + water_surface_overhang), //A list of numbers from -4 to, like, 14 or something.
+						point_solid(level, me, 
+							parent_left_tile_aligned_bound + value*tile_size, 
+							parent._y_bound ) )
+					+ [true]*filter_radius //Make the water surface fade out into the surrounding tile, like they fade into solid, even if not solid.
+			where
+				tile_edges = water_width/tile_size + 1,
+				parent_left_tile_aligned_bound = parent._x_bound%tile_size + tile_size/2
+			where
+				water_width = parent._x2_bound - parent._x_bound,
+				tile_size = 16,
+				water_surface_overhang = 2, //Have the water surface extend into the rocks a bit.
+				filter_radius = 2 //pattern needs a few elements on each side as buffer
 		)),
 	] asserting parent is obj liquid | 'No liquid set for surface.'",
 	
