--- a/data/level/Unused/Test/test2.cfg
+++ b/data/level/Unused/Test/test2.cfg
@@ -63,9 +63,9 @@
 			"custom": true,
 			"label": "_55e9247d",
 			"property_data": {
-				"_x2_bound": 1418,
-				"_x_bound": 1168,
-				"_y2_bound": 554,
+				"_x2_bound": 1600,
+				"_x_bound": 880,
+				"_y2_bound": 432,
 				"_y_bound": 304
 			},
 			"type": "water_controller",
@@ -91,20 +91,20 @@
 ,
 ,
 ,
-,
-,
-,
-,
-,
-,
-,
-,
-,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,nbr
-,,,,,,,,,,,,,,,nbr,,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr
-,,,,,,,,,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,,,,,nbr,nbr
-,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,,nbr,nbr,nbr,,,,nbr,nbr
-,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,nbr,nbr,,,,nbr,nbr
+,,,,,,,,,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr
+,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,,,,nbr,nbr,nbr
 ,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
@@ -136,11 +136,79 @@
 ,
 ,
 ,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf,,,,,,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf,,,,,,,wsf,wsf,,,,,,wsf,wsf,,,,,,,wsf,wsf,,,,,,,,,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf,,,,,,,wsf,wsf,,,,,,wsf,wsf,,,,,,,wsf,wsf,,,,,,,,,wsf,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf,,,,,,,wsf,wsf,,,,,,wsf,wsf,,,,,,,wsf,wsf,,,,,,,,,wsf,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,wsf,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf,,,,,,,,,,,,wsf,wsf
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsf",
+			"unique_tiles": ",wsf",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": -64,
+			"y_speed": 100,
+			"zorder": "wooden_scaffolding_background_behind_trees"
+		},
+		{
+			"tiles": ",
 ,
 ,
 ,
 ,
 ,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "liquid_particle_effects"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,
 ,
 ,
@@ -174,6 +242,75 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "exterior_solid_ground_tiles"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr
+,
+,
+,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr
+,
+,
+,
+,",
+			"unique_tiles": ",fbr",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_scaffolding_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "rail_tracks"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
 		}
 	],
 	"title": "",
@@ -196,7 +333,7 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			{
 				"color": [0.274509,0.0,0.0,0.196078],
 				"object": "@eval deserialize('159c0bdcb4a24184ad8b3060a1f06ba4')",
-				"rect": [1168,304,1418,554]
+				"rect": [880,304,1600,432]
 			}
 		],
 		"zorder": "water"
