--- a/data/level/Unused/Test/test2.cfg
+++ b/data/level/Unused/Test/test2.cfg
@@ -61,9 +61,9 @@
 			"_uuid": "159c0bdcb4a24184ad8b3060a1f06ba4",
 			"current_frame": "normal",
 			"custom": true,
-			"label": "_55e9247d",
+			"label": "3prong",
 			"property_data": {
-				"_x2_bound": 1600,
+				"_x2_bound": 1648,
 				"_x_bound": 880,
 				"_y2_bound": 432,
 				"_y_bound": 304
@@ -71,6 +71,36 @@
 			"type": "water_controller",
 			"x": 1268,
 			"y": 404
+		},
+		{
+			"_uuid": "25b4aacf1ed84fa0861c03378340e771",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3c322ee6",
+			"property_data": {
+				"_x2_bound": 1642,
+				"_x_bound": 1392,
+				"_y2_bound": 1674,
+				"_y_bound": 1424
+			},
+			"type": "water_controller",
+			"x": 1492,
+			"y": 1524
+		},
+		{
+			"_uuid": "e5dd1614f2c843908f1093acbccc72c1",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3c68e254",
+			"property_data": {
+				"_x2_bound": -574,
+				"_x_bound": -824,
+				"_y2_bound": 1730,
+				"_y_bound": 1480
+			},
+			"type": "water_controller",
+			"x": -724,
+			"y": 1580
 		}
 	],
 	"dimensions": [-640,-800,3135,1055],
@@ -96,10 +126,10 @@
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,nbr,nbr,,,,nbr,nbr
 ,,,,,,,,,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr
@@ -174,37 +204,10 @@
 ,
 ,
 ,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
@@ -274,43 +277,6 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "rail_tracks"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
 		}
 	],
 	"title": "",
@@ -333,7 +299,17 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			{
 				"color": [0.274509,0.0,0.0,0.196078],
 				"object": "@eval deserialize('159c0bdcb4a24184ad8b3060a1f06ba4')",
-				"rect": [880,304,1600,432]
+				"rect": [880,304,1648,432]
+			},
+			{
+				"color": [0.274509,0.0,0.0,0.196078],
+				"object": "@eval deserialize('25b4aacf1ed84fa0861c03378340e771')",
+				"rect": [1392,1424,1642,1674]
+			},
+			{
+				"color": [0.274509,0.0,0.0,0.196078],
+				"object": "@eval deserialize('e5dd1614f2c843908f1093acbccc72c1')",
+				"rect": [-824,1480,-574,1730]
 			}
 		],
 		"zorder": "water"
