--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -70,6 +70,9 @@ object_type: [{
 	zorder: "@include data/zorder.cfg:water",
 	
 	properties: {
+		list_probe_output: false, //debug() solidity probe results
+		show_probes_in_editor: false, //slow
+		
 		//test on ./anura --level=rocky-roots.cfg
 		//  …######_____#####_____#_#####_#####___#…
 		//0     0001   1  0  1   101  0  1 ?? 1  1  00
@@ -78,59 +81,94 @@ object_type: [{
 		calculate_water_surface_intensity: "
 			def(int index, [bool] point_solidity_list) -> decimal //0..1
 				max(
-					int(point_solidity_list[index+0]) * (3/3.), //Full opacity when no wall.
-					int(point_solidity_list[index-1]) * (2/3.), //More transparency farther into the wall.
-					int(point_solidity_list[index+1]) * (2/3.),
-					int(point_solidity_list[index-2]) * (1/3.),
-					int(point_solidity_list[index+2]) * (1/3.),
+					int(not point_solidity_list[index+0]) * (3/3.), //Full opacity when no wall.
+					int(not point_solidity_list[index-1]) * (2/3.), //More transparency farther into the wall.
+					int(not point_solidity_list[index+1]) * (2/3.),
+					int(not point_solidity_list[index-2]) * (1/3.),
+					int(not point_solidity_list[index+2]) * (1/3.),
 				)
 		",
 	},
 	
-	on_create: "[
-		set(relative_x, (parent._x_bound + parent._x2_bound)/2 - parent.mid_x),
-		set(relative_y, parent._y_bound-parent.mid_y),
-		
-		set(animation, ( //Two-line water surface image; fades in on both sides.
-			lib.gui.render_frame(c, 
-				water_width, 2, 
-				map(range(filter_radius, size(solidity_probes)-1 - filter_radius), 'step',
-					map([ //Top and bottom 'surface lines'.
-						{offset_y: 0, color: surface_color_1}, 
-						{offset_y: 1, color: surface_color_2},
-					], 'line', [
-						c.set_linear_pattern(parent_left_tile_aligned_bound + step*tile_size, 0,  parent_left_tile_aligned_bound + step*tile_size + tile_size, 0, [
-							line.color + { offset: 0, alpha: calculate_water_surface_intensity(step+0, solidity_probes) },
-							line.color + { offset: 1, alpha: calculate_water_surface_intensity(step+1, solidity_probes) },
-						]),
-						c.rectangle(parent_left_tile_aligned_bound + step*tile_size, line.offset_y, tile_size, 1),
-						c.fill(),
-					])
+	on_create: "(
+		[
+			set(relative_x, (parent._x_bound + parent._x2_bound)/2 - parent.mid_x),
+			set(relative_y, parent._y_bound-parent.mid_y),
+			
+			if(list_probe_output, [
+				debug('create', 'label', parent.label),
+				map(range(filter_radius, size(solidity_probes) - filter_radius), 'step', [
+					debug('probe', 'label', parent.label, 'solid', solidity_probes[step], 'opacity', calculate_water_surface_intensity(step+0, solidity_probes)),
+				])
+			]),
+			
+			if(show_probes_in_editor,
+				map(
+					solidity_probe_targets,
+					spawn('target', parent_left_tile_aligned_bound + value*tile_size, parent._y_bound, {
+						alpha: if(
+							point_solid(level, me, 
+								parent_left_tile_aligned_bound + value*tile_size, 
+								parent._y_bound ),
+							96, 256),
+					})
 				)
-			)
-			where
-				c = canvas(),
-				surface_color_1 = {red:1.0, green:1.0, blue:1.0}, //top line
-				surface_color_2 = {red:0.5, green:0.5, blue:0.5}, //bottom line
-				water_surface_fade_distance = 64,
-				solidity_probes =
-					[true]*filter_radius 
-					+ map(
-						range(-water_surface_overhang, tile_edges + water_surface_overhang), //A list of numbers from -4 to, like, 14 or something.
-						point_solid(level, me, 
-							parent_left_tile_aligned_bound + value*tile_size, 
-							parent._y_bound ) )
-					+ [true]*filter_radius //Make the water surface fade out into the surrounding tile, like they fade into solid, even if not solid.
-			where
-				tile_edges = water_width/tile_size + 1,
-				parent_left_tile_aligned_bound = parent._x_bound%tile_size + tile_size/2
-			where
-				water_width = parent._x2_bound - parent._x_bound,
-				tile_size = 16,
-				water_surface_overhang = 2, //Have the water surface extend into the rocks a bit.
-				filter_radius = 2 //pattern needs a few elements on each side as buffer
-		)),
-	] asserting parent is obj liquid | 'No liquid set for surface.'",
+			),
+			
+			if(water_width/tile_size*tile_size > 0,
+				set(animation, ( //Two-line water surface image; fades in on both sides.
+					lib.gui.render_frame(c, 
+						water_width/tile_size*tile_size, 2, 
+						map([ //Top and bottom 'surface lines'.
+								{offset_y: 0, color: surface_color_1}, 
+								{offset_y: 1, color: surface_color_2},
+							], 'line', [
+							c.set_linear_pattern(0, 0, (water_width/tile_size)*tile_size, 0, 
+								map( //Generate a gradient based on where there is and isn't solid land.
+									range(filter_radius, size(solidity_probes) - filter_radius),
+									'step',
+									line.color + {
+										offset: step/1.0/(size(solidity_probes) - filter_radius*2), 
+										alpha: calculate_water_surface_intensity(step, solidity_probes),
+									},
+								)
+							),
+							//c.set_source_color(line.color + {alpha: 0.5+(calculate_water_surface_intensity(step+0, solidity_probes)/2) }),
+							c.rectangle( //xywx
+								min(parent._x_bound, parent._x2_bound) % tile_size, line.offset_y,
+								water_width/tile_size*tile_size, 1,
+							),
+							c.fill(),
+						])
+					)
+				)),
+				debug('Warning: Not drawing surface for water ' + parent.label + ', too narrow.'),
+			),
+		] where
+			c = canvas(),
+			surface_color_1 = {red:1.0, green:1.0, blue:1.0}, //top line
+			surface_color_2 = {red:0.5, green:0.5, blue:0.5}, //bottom line
+			water_surface_fade_distance = 64,
+			solidity_probes =
+				[true] * (filter_radius+force_border_fade_width)
+				+ map(
+					solidity_probe_targets, //A list of numbers from -4 to, like, 14 or something.
+					point_solid(level, me, 
+						parent_left_tile_aligned_bound + value*tile_size, 
+						parent._y_bound ) )
+				+ [true] * (filter_radius+force_border_fade_width) //Make the water surface fade out into the surrounding tile, like they fade into solid, even if not solid.
+		where
+			solidity_probe_targets = range(0-water_surface_overhang+force_border_fade_width, tile_edges + water_surface_overhang*2 - force_border_fade_width*2 + 1)
+		where
+			tile_edges = water_width/tile_size + 1,
+			parent_left_tile_aligned_bound = lib.math.round_to_nearest(min(parent._x_bound, parent._x2_bound), tile_size) + (tile_size/2)
+		where
+			water_width = max(parent._x_bound, parent._x2_bound) - min(parent._x_bound, parent._x2_bound),
+			tile_size = 32,
+			water_surface_overhang = 0, //Have the water surface extend into the rocks a bit.
+			force_border_fade_width = 2, //The water surface needs a bit of padding to force a fade out. Better than just ending, I think?
+			filter_radius = 2, //pattern needs a few elements on each side as buffer
+	) asserting parent is obj liquid | 'No liquid set for surface.'",
 	
 	animation: {
 		id: "normal",
