--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -58,6 +58,7 @@ on_start_level: "
 on_load: "add_particle_effect",
 
 on_create: "[
+	set(facing, 1), //Hack around weird bug where water surface is offset when facing is -1.
 	add_object(liquid_surface),
 	fire_event(liquid_surface, 'create'),
 ]",
