--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -58,7 +58,6 @@ on_start_level: "
 on_load: "add_particle_effect",
 
 on_create: "[
-	set(facing, 1), //Hack around weird bug where water surface is offset when facing is -1.
 	add_object(liquid_surface),
 	fire_event(liquid_surface, 'create'),
 ]",
@@ -93,7 +92,7 @@ object_type: [{
 	
 	on_create: "(
 		[
-			set(relative_x, (parent._x_bound + parent._x2_bound)/2 - parent.mid_x),
+			set(relative_x, parent.facing * ((parent._x_bound + parent._x2_bound)/2 - parent.mid_x)),
 			set(relative_y, parent._y_bound-parent.mid_y),
 			
 			if(list_probe_output, [
